# deadlift

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: main.rs
cli/: Cargo.toml  Dockerfile  README.md  templates.json
cli/src/: main.rs  utils.rs
cli/src/agent/: mod.rs  start.rs
cli/src/call/: mod.rs
cli/src/module/: generate.rs  mod.rs  publish.rs
cli/src/project/: generate.rs  mod.rs  publish.rs
cli/src/user/: create.rs  mod.rs
cli/src/workflow/: call.rs  generate.rs  mod.rs  publish.rs
engine/: Cargo.toml
engine/src/: config.rs  host_functions.rs  lib.rs  nats.rs  plugin.rs  utils.rs
examples/realworld-deadlift/: README.md  package-lock.json  package.json  seed-deadlift-db.cjs
examples/realworld-deadlift/src/lib/: api.js
examples/realworld-deadlift/wasm-fetch/: Cargo.toml
examples/realworld-deadlift/wasm-fetch-filter/src/: lib.rs
examples/realworld-deadlift/wasm-fetch/src/: lib.rs
examples/realworld-deadlift/wasm-stdout-notification/: Cargo.toml
examples/realworld-deadlift/wasm-stdout-notification/src/: lib.rs
