[workspace]
members = ["agent", "cli", "engine"]
resolver = "2"

[workspace.package]
authors = ["ZeroSync <alex.dunne@zerosync.co>"]
edition = "2021"
homepage = "https://zerosync.co/"
license = "MIT"
repository = "https://github.com/zerosync-co/deadlift"
rust-version = "1.80"
version = "0.0.1"

[workspace.dependencies]
engine = { path = "engine" }
