[package]
name = "agent"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.4"
engine = { workspace = true }
tokio = { version = "1.39.2", features = ["full"] }
