[package]
name = "cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
