[package]
name = "cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
engine = { path = "../engine", features = ["clap"] }
serde_yaml = "0.9.34"
extism = "1.5.0"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"

[[bin]]
name = "deadlift"
path = "src/main.rs"
