[package]
name = "engine"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
clap = { version = "4.5.16", optional = true }
directories = "5.0.1"
extism = "1.5.0"
futures = "0.3.30"
futures-util = "0.3.30"
petgraph = { version = "0.6.5", features = ["serde-1"] }
postgres = "0.19.9"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.121"

[features]
clap = ["dep:clap"]
